live/cadev/namespaces/jenkins-dev/6-netpol-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus.any.any
  namespace: jenkins-dev
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
        podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      # ports:
      # - port: 8080
        # protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
